Basic Project Layout and Functionality Added

--- a/WebContent/InsertTask.html
+++ b/WebContent/InsertTask.html
@@ -32,29 +32,29 @@ footer {
 
 <body>
 <header>
-<h1> Insert Data (Hibernate)</h1>
+<h1> Add a Task</h1>
 </header>
 
 <nav>
-<a href="/webproject/simpleSearchHB.html">Search Data</a> <br>
+<a href="/techexercise-betzinger/TaskHome.html">Home</a><br>
+<a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a> <br>
+<a href="/techexercise-betzinger/TaskView.html">View Tasks</a> <br>
+
 </nav>
 
 <section>
 	<h1>User Input</h1>
 	
-	<form action="SimpleInsertHB" method="POST">
+	<form action="InsertTask" method="POST">
 	
-		User Name: <input type="text" name="userName"> <br />
-		Age: <input type="text" name="age"> <br />
-		Phone: <input type="text" name="phone"> <br />
+		Task Name: <input type="text" name="userName"> <br />
+		Priority: <input type="text" name="age"> <br />
+		Due Date: <input type="text" name="phone"> <br />
 		
 		<input type="submit" value="Submit" />
 	</form>
 
 </section>
 
-<footer>
-Copyright
-</footer>
 </body>
 </html>
