--- a/WebContent/TaskView.html
+++ b/WebContent/TaskView.html
@@ -32,27 +32,25 @@ footer {
 
 <body>
 <header>
-<h1> Search Data (Hibernate) </h1>
+<h1> View Tasks </h1>
 </header>
 
 <nav>
-<a href="/webproject/simpleInsertHB.html">Insert Data</a> <br>
+<a href="/techexercise-betzinger/TaskHome.html">Home</a><br>
+<a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a> <br>
+<a href="/techexercise-betzinger/TaskView.html">View Tasks</a> <br>
 </nav>
 
 <section>
 	<h1>User Input</h1>
 	
-	<form action="SimpleSearchHB" method="POST">
+< 	<form action="TaskView" method="POST">
 	
-		User Name: <input type="text" name="keyword"> <br />
+		Due Date: <input type="text" name="keyword"> <br />
 		
 		<input type="submit" value="Search" />
-	</form>
+	</form> 
 
 </section>
-
-<footer>
-Copyright
-</footer>
 </body>
 </html>
