--- a/WebContent/TaskHome.html
+++ b/WebContent/TaskHome.html
@@ -39,6 +39,7 @@ footer {
 <a href="/techexercise-betzinger/TaskHome.html">Home</a><br>
 <a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a> <br>
 <a href="/techexercise-betzinger/TaskView.html">View Tasks</a> <br>
+<a href="/techexercise-betzinger/RemoveTask.html">Remove Tasks</a><br>
 </nav>
 
 <section>
