--- a/WebContent/TaskView.html
+++ b/WebContent/TaskView.html
@@ -39,16 +39,17 @@ footer {
 <a href="/techexercise-betzinger/TaskHome.html">Home</a><br>
 <a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a> <br>
 <a href="/techexercise-betzinger/TaskView.html">View Tasks</a> <br>
+<a href="/techexercise-betzinger/RemoveTask.html">Remove Tasks</a><br>
 </nav>
 
 <section>
-	<h1>User Input</h1>
+	<h2>Input a date to view tasks on that date, or leave blank to view all tasks:</h2>
 	
-< 	<form action="TaskView" method="POST">
+ 	<form action="TaskView" method="POST">
 	
 		Due Date: <input type="text" name="keyword"> <br />
 		
-		<input type="submit" value="Search" />
+		<input type="submit" value="Search!" />
 	</form> 
 
 </section>
