--- a/WebContent/TaskView.html
+++ b/WebContent/TaskView.html
@@ -2,30 +2,51 @@
 <head>
 <style>
 header {
-    background-color:black;
+    background-color:navy;
     color:white;
+    font-family: arial;
     text-align:center;
-    padding:5px;	 
+    padding:5px;
+    border: 2px solid black;
 }
 nav {
     line-height:30px;
     background-color:#eeeeee;
-    height:300px;
-    width:100px;
-    float:left;
-    padding:5px;	      
+    padding:5px;
+    text-align: center;    
+    border-left: 1px solid black;
+    border-right: 1px solid black;  
+    border-bottom: 1px solid black;
 }
 section {
-    width:350px;
-    float:left;
-    padding:10px;	 	 
+    width:auto;
+    padding:10px;
+    font-family: arial;
+    padding-left: 10px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+a {
+	border: 1px solid black;
+	font-family: arial;
+	background-color: navy;
+	color: white;
+	display: inline-block;
+	text-align: center;
+}
+form {
+	display: inline-block;
 }
 footer {
-    background-color:black;
+    background-color:navy;
     color:white;
     clear:both;
-    text-align:center;
-    padding:5px;	 	 
+    padding:1px;
+    border: 2px solid black;
 }
 </style>
 </head>
@@ -36,10 +57,10 @@ footer {
 </header>
 
 <nav>
-<a href="/techexercise-betzinger/TaskHome.html">Home</a><br>
-<a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a> <br>
-<a href="/techexercise-betzinger/TaskView.html">View Tasks</a> <br>
-<a href="/techexercise-betzinger/RemoveTask.html">Remove Tasks</a><br>
+<a href="/techexercise-betzinger/TaskHome.html">Home</a>
+<a href="/techexercise-betzinger/InsertTask.html">Add Tasks</a>
+<a href="/techexercise-betzinger/TaskView.html">View Tasks</a>
+<a href="/techexercise-betzinger/RemoveTask.html">Remove Tasks</a>
 </nav>
 
 <section>
@@ -53,5 +74,8 @@ footer {
 	</form> 
 
 </section>
+<footer>
+<p>Tech Exercise by Nathan Betzinger</p>
+</footer>
 </body>
 </html>
