Changed wording on home page

--- a/WebContent/InsertTask.html
+++ b/WebContent/InsertTask.html
@@ -65,7 +65,7 @@ footer {
 
 <section>
 	<h1>Add a task:</h1>
-	<p><b>Priority</b> ranges from 1-5, 1 being imperative, 5 being unimportant. <b>Date</b> should be formatted as such: "01-01-2021"</p>
+	<p><b>Task Names</b> MUST be unique! <b>Priority</b> ranges from 1-5, 1 being imperative, 5 being unimportant. <b>Date</b> should be formatted as such: "01-01-2021".</p>
 	
 	<form action="InsertTask" method="POST">
 	
